--- a/projects/investigaciones/style.css
+++ b/projects/investigaciones/style.css
@@ -78,12 +78,11 @@
 }
 
 .ficha-body {
-    background-color: #23143c;
+    background-color: #3c2166;
     padding: 2em 1em;
     min-height: 400px;
     border-radius: .5em .5em 0 0;
-    background: rgb(32, 14, 60);
-    background: linear-gradient(180deg, rgba(32, 14, 60, 1) 0%, rgba(70, 43, 121, 1) 100%);
+    /*background: linear-gradient(180deg, rgba(32, 14, 60, 1) 0%, rgba(70, 43, 121, 1) 100%);*/
 }
 
 .ficha-body a {
@@ -95,14 +94,14 @@
 }
 
 .ficha .title {
-    color: #fab937;
+    color: #f8be4b;
     font-size: 2em;
     font-weight: 700
 }
 
 .subtitulo{
     text-align: center;
-    color: #FAB937;
+    color: #f8bf4d;
     font-weight: bold;
     margin-top: 2em;
 }
